<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Popular Movies</string>
    <string name="sort_menu_label">Sort</string>
    <string name="popular_sort_label">Popularity</string>
    <string name="top_rated_sort_label">Top Rated</string>
    <string name="top_rated_title">Top Rated Movies</string>
    <string name="backdrop_description">Moview Backdrop</string>
    <string name="movie_poster_description">Movie Poster</string>
    <string name="rating_label">Average Rating</string>
    <string name="content_authority">com.example.android.popularmovies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_label">Favorite</string>
    <string name="favorite_title">Favorite Movies</string>
    <string name="dummy_rating_avg">4.5/10</string>
    <string name="dummy_rating_count">7000</string>
    <string name="dummy_release_date">25 July, 2017</string>
    <string name="overview_label">Overview</string>
    <string name="video_label">Video</string>
    <string name="review_label">Review</string>
    <string name="video_not_supported">Unsupported video format</string>
    <string name="action_share">Share</string>
    <string name="share_template">Check out \'<xliff:g id="title">%1$s</xliff:g>\' at <xliff:g id="url">%2$s</xliff:g></string>
    <string name="dummy_title" translatable="false">The Rise of The Planet of The Apes</string>
    <string name="dummy_overview" translatable="false">lorem ipsum sir dolor amet</string>
</resources>
