<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- icon from: https://icons8.com/icon/19386/Descending-Sorting" -->
    <item android:id="@+id/action_sort"
        android:title="@string/sort_menu_label"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_sort"
        app:showAsAction="ifRoom">

        <menu>
            <group
                android:id="@+id/menu_sort_group"
                android:checkableBehavior="single">
                <item android:id="@+id/action_popular"
                    android:title="@string/popular_sort_label" />

                <item android:id="@+id/action_top_rated"
                    android:title="@string/top_rated_sort_label" />

                <item android:id="@+id/action_favorite"
                    android:title="@string/favorite_label" />
            </group>
        </menu>
    </item>

</menu>