<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/backdrop_height"
            android:id="@+id/backdrop"
            android:scaleType="centerCrop"
            android:contentDescription="@string/backdrop_description"
            tools:background="#f0f0f0"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:id="@+id/movie_poster"
            android:contentDescription="@string/movie_poster_description"
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/marginTop_poster"
            tools:background="#ff0000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/rate_avg"
            android:drawableLeft="@drawable/ic_favorite_star"
            android:drawableStart="@drawable/ic_favorite_star"
            android:drawablePadding="6dp"
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_toRightOf="@+id/movie_poster"
            android:layout_toEndOf="@+id/movie_poster"
            android:layout_below="@id/backdrop"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:fontFamily="monospace"
            android:textStyle="bold"
            tools:text="@string/dummy_rating_avg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/rate_count"
            tools:text="@string/dummy_rating_count"
            android:drawableLeft="@drawable/ic_thumb_up"
            android:drawableStart="@drawable/ic_thumb_up"
            android:drawablePadding="6dp"
            android:layout_toRightOf="@+id/rate_avg"
            android:layout_toEndOf="@+id/rate_avg"
            android:layout_alignTop="@+id/rate_avg"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:fontFamily="monospace"
            android:textStyle="bold"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favorite"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/marginTop_favorite"
            android:layout_marginEnd="@dimen/default_padding"
            android:layout_marginRight="@dimen/default_padding"
            android:button="@drawable/favorite_selection" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="serif"
            android:id="@+id/title"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_below="@+id/movie_poster"
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginRight="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:layout_marginTop="32dp"
            android:textColor="@color/primary_text"
            tools:text="The Rise of The Planet of The Apes"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/release_date"
            android:layout_alignLeft="@+id/title"
            android:layout_alignStart="@+id/title"
            android:layout_alignRight="@+id/title"
            android:layout_alignEnd="@+id/title"
            android:layout_below="@+id/title"
            android:drawableLeft="@drawable/ic_calendar"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:fontFamily="sans-serif-smallcaps"
            tools:text="@string/dummy_release_date"/>

        <TextView
            android:id="@+id/overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/title"
            android:layout_alignStart="@+id/title"
            android:layout_alignRight="@+id/title"
            android:layout_alignEnd="@+id/title"
            android:layout_below="@+id/release_date"
            android:layout_marginTop="22sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/primary_text"
            android:fontFamily="serif"
            android:text="@string/overview_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/title"
            android:layout_alignStart="@+id/title"
            android:layout_alignRight="@+id/title"
            android:layout_alignEnd="@+id/title"
            android:id="@+id/overview"
            android:layout_below="@+id/overview_label"
            android:fontFamily="serif"
            android:textColor="@color/secondary_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="lorem ipsum sir dolor amet"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/video_container"
            android:layout_alignLeft="@+id/title"
            android:layout_alignStart="@+id/title"
            android:layout_alignRight="@+id/title"
            android:layout_alignEnd="@+id/title"
            android:layout_below="@+id/overview"
            android:layout_marginTop="22sp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/primary_text"
                android:fontFamily="serif"
                android:text="@string/video_label"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_container"
            android:layout_alignLeft="@+id/title"
            android:layout_alignStart="@+id/title"
            android:layout_alignRight="@+id/title"
            android:layout_alignEnd="@+id/title"
            android:layout_below="@+id/video_container"
            android:layout_marginTop="22sp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/primary_text"
                android:fontFamily="serif"
                android:text="@string/review_label"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
